--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -66,14 +66,70 @@
                     <view key="view" contentMode="scaleToFill" id="8r4-Qc-681">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2xp-PX-yng">
+                                <rect key="frame" x="0.0" y="88" width="414" height="748"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qcf-wp-yRM">
+                                        <rect key="frame" x="20" y="0.0" width="374" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="9Nk-g6-BDC"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IVo-YG-iKr">
+                                        <rect key="frame" x="20" y="50" width="374" height="698"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Qcf-wp-yRM" firstAttribute="leading" secondItem="FJ2-GM-aZK" secondAttribute="leading" constant="20" id="8zY-8h-0KZ"/>
+                                    <constraint firstItem="IVo-YG-iKr" firstAttribute="leading" secondItem="FJ2-GM-aZK" secondAttribute="leading" constant="20" id="9nv-D5-9M9"/>
+                                    <constraint firstItem="FJ2-GM-aZK" firstAttribute="trailing" secondItem="IVo-YG-iKr" secondAttribute="trailing" constant="20" id="Bkk-IC-nKQ"/>
+                                    <constraint firstItem="FJ2-GM-aZK" firstAttribute="trailing" secondItem="Qcf-wp-yRM" secondAttribute="trailing" constant="20" id="JoD-ap-oMv"/>
+                                    <constraint firstItem="IVo-YG-iKr" firstAttribute="bottom" secondItem="FJ2-GM-aZK" secondAttribute="bottom" id="VKj-lS-tfZ"/>
+                                    <constraint firstItem="IVo-YG-iKr" firstAttribute="top" secondItem="Qcf-wp-yRM" secondAttribute="bottom" id="hTG-K4-yHM"/>
+                                    <constraint firstItem="Qcf-wp-yRM" firstAttribute="top" secondItem="FJ2-GM-aZK" secondAttribute="top" id="i0J-0P-3tv"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="mYj-Ye-Zu7"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="FJ2-GM-aZK"/>
+                            </scrollView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="diP-in-yaD">
+                                <rect key="frame" x="0.0" y="836" width="414" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="g70-Eb-rlN"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="x4J-ed-Tg9"/>
+                                </constraints>
+                                <items/>
+                            </toolbar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="KBW-2b-aCd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="diP-in-yaD" firstAttribute="leading" secondItem="KBW-2b-aCd" secondAttribute="leading" id="6Cg-K8-Y3H"/>
+                            <constraint firstAttribute="bottom" secondItem="diP-in-yaD" secondAttribute="bottom" id="6WC-1K-NkX"/>
+                            <constraint firstItem="diP-in-yaD" firstAttribute="trailing" secondItem="KBW-2b-aCd" secondAttribute="trailing" id="DsF-gK-P8A"/>
+                            <constraint firstItem="2xp-PX-yng" firstAttribute="leading" secondItem="KBW-2b-aCd" secondAttribute="leading" id="ELl-xZ-t0L"/>
+                            <constraint firstItem="2xp-PX-yng" firstAttribute="trailing" secondItem="KBW-2b-aCd" secondAttribute="trailing" id="hyS-Ig-2J5"/>
+                            <constraint firstItem="2xp-PX-yng" firstAttribute="top" secondItem="KBW-2b-aCd" secondAttribute="top" id="oRh-cp-mdn"/>
+                            <constraint firstItem="diP-in-yaD" firstAttribute="top" secondItem="2xp-PX-yng" secondAttribute="bottom" id="xdc-5x-tlq"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Zf9-xv-c3u"/>
+                    <connections>
+                        <outlet property="newNoteToolBar" destination="diP-in-yaD" id="uji-sQ-5zp"/>
+                        <outlet property="noteTextView" destination="IVo-YG-iKr" id="l9u-Pi-Bib"/>
+                        <outlet property="noteTitleField" destination="Qcf-wp-yRM" id="tyB-zd-ko7"/>
+                        <outlet property="scrollView" destination="2xp-PX-yng" id="4M9-xp-mJr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3EP-Yu-nFt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1657" y="82"/>
+            <point key="canvasLocation" x="1656.521739130435" y="81.696428571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uZu-eX-lj4">
@@ -95,6 +151,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
