--- a/Notes/View/Base.lproj/Main.storyboard
+++ b/Notes/View/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Notes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,12 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="HEe-t6-Mqs">
-                                <rect key="frame" x="20" y="88" width="374" height="51"/>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="HEe-t6-Mqs">
+                                <rect key="frame" x="10" y="88" width="394" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="HcN-No-BMb">
-                                <rect key="frame" x="20" y="139" width="374" height="697"/>
+                                <rect key="frame" x="20" y="139" width="374" height="717"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NoteCell" rowHeight="67" id="hqi-YJ-Pes" customClass="NoteTableViewCell" customModule="Notes" customModuleProvider="target">
@@ -64,9 +64,9 @@
                                 </prototypes>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hic-lf-vRu">
-                                <rect key="frame" x="0.0" y="836" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="856" width="414" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="gCc-CV-Hjc"/>
+                                    <constraint firstAttribute="height" constant="40" id="gCc-CV-Hjc"/>
                                 </constraints>
                                 <items>
                                     <barButtonItem title="Item" image="plus" catalog="system" id="6wa-af-ZJY">
@@ -80,8 +80,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HEe-t6-Mqs" secondAttribute="trailing" constant="20" id="2gf-6U-meZ"/>
-                            <constraint firstItem="HEe-t6-Mqs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BAU-22-Xiw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HEe-t6-Mqs" secondAttribute="trailing" constant="10" id="2gf-6U-meZ"/>
+                            <constraint firstItem="HEe-t6-Mqs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="BAU-22-Xiw"/>
                             <constraint firstAttribute="bottom" secondItem="Hic-lf-vRu" secondAttribute="bottom" id="BS1-Et-gYF"/>
                             <constraint firstItem="HcN-No-BMb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="C1W-hv-KkC"/>
                             <constraint firstItem="HcN-No-BMb" firstAttribute="top" secondItem="HEe-t6-Mqs" secondAttribute="bottom" id="SBI-EU-Trw"/>
@@ -92,7 +92,7 @@
                             <constraint firstItem="Hic-lf-vRu" firstAttribute="top" secondItem="HcN-No-BMb" secondAttribute="bottom" id="vm9-EV-rab"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Azy-Yh-ET9"/>
+                    <navigationItem key="navigationItem" title="Notes" id="Azy-Yh-ET9"/>
                     <connections>
                         <outlet property="searchNote" destination="HEe-t6-Mqs" id="y7h-f5-fEt"/>
                         <outlet property="tableViewNotes" destination="HcN-No-BMb" id="cGL-7A-EcY"/>
@@ -117,27 +117,27 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uwC-aI-8pZ">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="748"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y03-uT-NG3">
-                                                <rect key="frame" x="20" y="0.0" width="374" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y03-uT-NG3">
+                                                <rect key="frame" x="20" y="0.0" width="374" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TFh-yQ-4hF">
-                                                <rect key="frame" x="20" y="34" width="374" height="714"/>
+                                                <rect key="frame" x="20" y="35" width="374" height="713"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <color key="textColor" systemColor="labelColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="Y03-uT-NG3" firstAttribute="top" secondItem="uwC-aI-8pZ" secondAttribute="top" id="Llr-Hb-38S"/>
                                             <constraint firstItem="TFh-yQ-4hF" firstAttribute="top" secondItem="Y03-uT-NG3" secondAttribute="bottom" id="Sxp-Di-lHT"/>
                                             <constraint firstItem="TFh-yQ-4hF" firstAttribute="leading" secondItem="uwC-aI-8pZ" secondAttribute="leading" constant="20" id="Yqw-2f-JSJ"/>
                                             <constraint firstAttribute="trailing" secondItem="TFh-yQ-4hF" secondAttribute="trailing" constant="20" id="dVY-n3-gKM"/>
                                             <constraint firstAttribute="bottom" secondItem="TFh-yQ-4hF" secondAttribute="bottom" id="kfP-KT-ds9"/>
                                             <constraint firstItem="Y03-uT-NG3" firstAttribute="leading" secondItem="uwC-aI-8pZ" secondAttribute="leading" constant="20" id="qhC-3d-WQ2"/>
+                                            <constraint firstItem="Y03-uT-NG3" firstAttribute="top" secondItem="uwC-aI-8pZ" secondAttribute="top" id="ye0-AR-MTx"/>
                                             <constraint firstAttribute="trailing" secondItem="Y03-uT-NG3" secondAttribute="trailing" constant="20" id="yeC-26-Nws"/>
                                         </constraints>
                                     </view>
@@ -152,10 +152,9 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="FJ2-GM-aZK"/>
                             </scrollView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="diP-in-yaD">
-                                <rect key="frame" x="0.0" y="836" width="414" height="60"/>
+                                <rect key="frame" x="0.0" y="856" width="414" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="g70-Eb-rlN"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="x4J-ed-Tg9"/>
+                                    <constraint firstAttribute="height" constant="40" id="HFm-su-hVA"/>
                                 </constraints>
                                 <items/>
                             </toolbar>
